--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Home | TotalFreedom Minecraft Server</title>
-      <meta name="author" content="aggelosQQ, markbyron, DarthSalamon, Madgeek1450, TotalFreedom">
-      <meta name="keywords" content="TF,minecraft,totalfreedom,free op,server,worldedit,freebuild">
-      <meta name="description" content="TotalFreedom is the first Free OP Minecraft server, which is up and running since 2010! play.totalfreedom.me">
+      <title>V Einstein</title>
+      <meta name="author" content="Prince">
+      <meta name="keywords" content="school,grade6,presidents">
+      <meta name="description" content="This website is designed to be published at the same time the next school year comes">
       <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600" rel="stylesheet">
       <link async rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
       <link async rel="stylesheet" href="css/component.min.css">
@@ -23,202 +23,15 @@
             <div class="nav-wrapper z-depth-0">
                <a href="#" id="brand-top" class="brand-logo"></a> <a href="#" data-activates="mobile" class="button-collapse"><i class="fa fa-bars"></i></a> 
                <ul class="right hide-on-med-and-down cl-effect-14" id="cl-effect-14">
-                  <li><a href="#" id="top">Home</a></li>
-                  <li><a href="#" id="rules">Rules</a></li>
-                  <li><a href="#" id="staff">Staff</a></li>
-                  <li><a href="masterbuilders/">Masterbuilders</a></li>
-                  <li><a href="http://totalfreedom.boards.net" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="You will be redirected to totalfreedom.boards.net">Forum</a></li>
+                  <li><a href="#" id="officers">Officers</a></li>
                </ul>
                <ul class="side-nav" id="mobile">
                   <li><a href="#header">Home</a></li>
-                  <li><a href="#rules">Rules</a></li>
                   <li><a href="#staff">Staff</a></li>
-                  <li><a href="masterbuilders/">Masterbuilders</a></li>
-                  <li><a href="http://totalfreedom.boards.net">Forum</a></li>
                </ul>
             </div>
          </nav>
       </div>
-      <div class="section active cover-1" id="header">
-         <div class="online-part">
-            <h3 id="server-status"> <span id="online"></span></h3>
-            <a href="#onlineplayers" class="button modal-trigger" data-target="onlineplayers">Online Players</a> 
-         </div>
-
-         <div id="onlineplayers" class="modal modal-fixed-footer">
-            <div class="modal-content">
-               <h4 id="players-online">
-               </h4> 
-               <ul id="players"></ul>
-               
-               <div class="modal-msg">
-                  <h5>Why don't you visit us yourself?</h5>
-                  <span class="ip">play.totalfreedom.me</span>
-               </div>
-            </div>
-            <div class="modal-footer"> 
-               <a href="#!" class="modal-action modal-close btn-flat waves-effect waves-dark">I'm Done</a>
-            </div>
-         </div>
-      </div>
-      <div class="section cover-2" id="rules-sec">
-         <h1 class="section-title">TotalFreedom Rules</h1>
-         <div class="rules-section">
-            <h2 id="rules-title" class="one waves-effect waves-brown">No Griefing <i class="fa fa-chevron-right rules-icon hide-on-med-and-down"></i></h2>
-            <p class="rule a">Do not grief the server. There are many ways to do that, but the most common are to intentionally crash the server, lag the server, destroy or damage the spawn, destroy or damage other player's builds, erase warp points, PVP without agreement of other players, chat spamming, and so forth.<br>Use your best judgment, and remember that other people are on here to have fun also.</p>
-         </div>
-         <div class="rules-section">
-            <h2 id="rules-title" class="two waves-effect waves-brown">No Posing <i class="fa fa-chevron-right rules-icon hide-on-med-and-down"></i></h2>
-            <p class="rule b">Do not pose as the server owner (markbyron) and do not pose as an admin or one of the other regular players that use Total Freedom. By posing, that means using a program such as MinecraftSP or otherwise changing your nick. Posing to change your title or to pose as somebody "famous" (like Notch) is okay provided you do not use it grief the server. You may not use nicks or tags that imply you have an official position on the server. This includes any nick or tag including the words admin, senior, owner, telnet, builder, architect, coder, dev, programmer, mod, security, or any nick or tag that the owner or a senior admin believes is an attempt to pose. In such cases, the offender will be de-nicked and warned.</p>
-         </div>
-         <div class="rules-section">
-            <h2 id="rules-title" class="three waves-effect waves-brown">Respect Privacy <i class="fa fa-chevron-right rules-icon hide-on-med-and-down"></i></h2>
-            <p class="rule c">Respect the "Total Freedom" of other players. Do not be a pest or a nuisance to others, and respect their privacy. Do not "help" with builds if people do not want you to, and do not teleport someone without their permission. It is best to use /tpahere to request for someone to teleport to you, rather than forcefully teleporting them. </p>
-         </div>
-         <div class="rules-section">
-            <h2 id="rules-title" class="four waves-effect waves-brown">Respect others <i class="fa fa-chevron-right rules-icon hide-on-med-and-down"></i></h2>
-            <p class="rule d">Do not engage in personal attacks on other players/admins and take all personal disputes off the server. If you don't like a particular player, feel more than free to use the ignore command on them but personal wars on the server won't be tolerated regardless of who started it and temporary bans will result. If you're coming on the server to troll other players, you'll end up getting trolled yourself (we love to play with trolls). Similarly, threats to DOX, threats to commit illegal acts (e.g. DDOS), graphic sexual discussion or RP, linking to porn or scam sites, racist attacks, and other forms of behavior designed to offend, intimidate or harass will not be tolerated.</p>
-         </div>
-         <div class="rules-section">
-            <h2 id="rules-title" class="five waves-effect waves-brown">Adhere to Authority <i class="fa fa-chevron-right rules-icon hide-on-med-and-down"></i></h2>
-            <p class="rule e">Do not override the actions of the server owner (markbyron) or other admins. For example, if an admin de-ops or bans a player for griefing, you may not re-op or pardon them without permission. Super admins will follow the directions of senior admins with respect to any admin matter unless it violates server rules. If it violates the rules, the admin will notify the proper authority.</p>
-         </div>
-
-
-         <p class="caution"><i class="fa fa-exclamation-triangle"></i> TotalFreedom does not accept donations.</p>
-         <a class="grey-text" href="http://totalfreedom.boards.net/thread/21065/server-conduct-policy-players-admins">Read the Conduct Policy</a> 
-
-
-         <h1 class="section-title">TotalFreedom Help</h1>
-         <div class="rules-section">
-            <h2 id="rules-title" class="six">Saving Builds <i class="fa fa-chevron-right rules-icon hide-on-med-and-down"></i></h2>
-            <p class="rule f">To save your builds (i.e. create a WorldEdit schematic), first use the //wand tool to select the bounds of your build (i.e. the opposite corners of your build). Then, type //copy to place your build on the clipboard, and type //schem save nameofbuild to save your build (replacing nameofbuild with a unique name of your own).<br/> To load a schematic back into the world, do //schem load nameofbuild, and then //paste..</p>
-         </div>
-         <div class="rules-section">
-            <h2 id="rules-title" class="seven">Flatlands <i class="fa fa-chevron-right rules-icon hide-on-med-and-down"></i></h2>
-            <p class="rule g">This server features an additional flat-land building world which is very useful for building intricate creations. You can access this world by typing /flatlands, and you can get back to the main world by typing /flatlands again.</p>
-         </div>
-         <div class="rules-section">
-            <h2 id="rules-title" class="eight">Gamemodes <i class="fa fa-chevron-right rules-icon hide-on-med-and-down"></i></h2>
-            <p class="rule h">You are free to use creative or survival mode on the server. For creative, type /creative. For survival, type /survival. </p>
-         </div>
-
-         <div class="rules-section">
-            <h2 id="rules-title" class="nine">TotalFreedom IPs <i class="fa fa-chevron-right rules-icon hide-on-med-and-down"></i></h2>
-            <div class="rule i"><p><u>IPs you may use to connect to TotalFreedom.</u></p>
-            <ul>
-            <li>play.totalfreedom.me (Recommended)</li>
-            <li>64.34.190.101:28965</li>
-            </ul>
-            </div>
-         </div>
-      </div>
-      <div class="section cover-3" id="staff-sec">
-         <br/> 
-         <h1 class="section-title">Current Staff</h1>
-         <div class="admins">
-            <h2 class="rank">TotalFreedom Executives</h2>
-            <ul id="executiveboard">
-               <a href="http://www.twitter.com/totalfreedommc" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="images/markbyron.png" class="responsive-img head-icon">MarkByron - Owner & Founder </li>
-               </a>
-               <a href="http://www.twitter.com/JeromSar" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/Prozza/80.png" class="responsive-img head-icon">Prozza - Executive Lead Dev </li>
-               </a>
-               <a href="http://www.twitter.com/Fiinest95" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/Finest95/80.png" class="responsive-img head-icon">Finest95 - Forum Owner & Manager </li>
-               </a>
-               <a href="https://www.twitter.com/wickedgaminguk" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/WickedGamingUK/80.png" class="responsive-img head-icon">WickedGamingUK - Server Liaison </li>
-               </a>
-               <a href="http://totalfreedom.boards.net/user/246" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/inFamas97/80.png" class="responsive-img head-icon">inFAmas97 - Executive Admin </li>
-               </a>
-               <a href="http://totalfreedom.boards.net/user/47" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/EnderLolzeh/80.png" class="responsive-img head-icon">EnderLolzeh - Executive Admin </li>
-               </a>
-               <a href="https://keybase.io/cowgomooo12" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/cowgomooo12/80.png" class="responsive-img head-icon">Cowgomooo12 - Executive Admin </li>
-               </a>
-               <a href="http://totalfreedom.boards.net/user/3448" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/TheMinecraft/80.png" class="responsive-img head-icon">TheMinecraft - Security Officer </li>
-               </a>
-               <a href="http://totalfreedom.boards.net/user/16323" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/DarkLynx108/80.png" class="responsive-img head-icon">DarkLynx108 - Creative Designer </li>
-               </a>
-               <a href="http://totalfreedom.boards.net/user/916" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/wisemagick1/80.png" class="responsive-img head-icon">wisemagick1 - Evangelist </li>
-               </a>
-               <a href="https://keybase.io/aggelosQQ" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="images/aggelosqq.png" class="responsive-img head-icon">aggelosQQ - Webmaster </li>
-               </a>
-            </ul>
-            <h2 class="rank">Global Forum Moderators</h2>
-            <ul id="modboard">
-               <a href="http://www.twitter.com/Fiinest95" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/Finest95/80.png" class="responsive-img head-icon">Finest95 - Forum Owner & Manager </li>
-               </a>
-               <a href="http://www.twitter.com/totalfreedommc" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="images/markbyron.png" class="responsive-img head-icon">MarkByron </li>
-               </a>
-               <a href="http://www.twitter.com/JeromSar" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/Prozza/80.png" class="responsive-img head-icon">Prozza </li>
-               </a>
-               <a href="https://www.twitter.com/wickedgaminguk" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/WickedGamingUK/80.png" class="responsive-img head-icon">WickedGamingUK </li>
-               <a href="https://keybase.io/cowgomooo12" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/cowgomooo12/80.png" class="responsive-img head-icon">Cowgomooo12 </li>
-               </a>
-               <a href="htttps://twitter.com/OliverDatGuy" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/OliverDatGuy/80.png" class="responsive-img head-icon">OliverDatGuy </li>
-               <a href="http://totalfreedom.boards.net/user/246" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/inFAmas97/80.png" class="responsive-img head-icon">inFAmas97 </li>
-               </a>
-               <a href="http://totalfreedom.boards.net/user/47" target="_blank" class="waves-effect waves-dark">
-                  <li> <img src="https://minotar.net/avatar/EnderLolzeh/80.png" class="responsive-img head-icon">EnderLolzeh </li>
-               </a>
-            </ul>
-            <div class="container">
-               <ul class="rest">
-                  <li><a href="staff.html" class="readmore waves-effect waves-light">See the rest of the staff <i class="fa fa-chevron-right fa-fw"></i></a></li>
-                  <br/> 
-               </ul>
-               <br/> 
-               <hr>
-               <br/> 
-               
-               <ul class="useful">
-               <h3 style="text-align: center;">Useful Links</h3>
-                  <a href="http://totalfreedom.boards.net" target="_blank" class="readmore waves-effect waves-dark">
-                     <li><i class="fa fa-comments icon"></i><br/> Forum</li>
-                  </a>
-                  <a href="http://totalfreedom.boards.net/thread/21065/server-conduct-policy-players-admins" target="_blank" class="readmore waves-effect waves-dark">
-                     <li><i class="fa fa-ban icon"></i><br/> Conduct Policy</li>
-                  </a>
-                  <a href="http://github.com/TotalFreedom" target="_blank" class="readmore waves-effect waves-dark">
-                     <li><i class="fa fa-github icon"></i><br/>Github</li>
-                  </a>
-                  <a href="https://twitter.com/totalfreedommc" target="_blank" class="readmore waves-effect waves-dark">
-                     <li><i class="fa fa-twitter icon"></i><br/> Twitter</li>
-                  </a>
-               </ul>
-            </div>
-         </div>
-         <footer class="page-footer transparent">
-            <div class="container">
-               <div class="footer-copyright">
-                  <div class="container">
-                     <hr>
-                     TotalFreedom &copy; 2010 - <span id="curYear"></span> <a class="grey-text text-lighten-4 right" href="https://aggelosqq.github.io" target="_blank">Made by aggelosQQ</a> 
-                  </div>
-               </div>
-            </div>
-            <div id="note">
-               <h6>Got an idea you would love to see implemented on the page? <a href="https://github.com/TotalFreedom/Website/issues" target="_blank">Please post your suggestions here</a>!</h6>
-            </div>
-         </footer>
-      </div>
-
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
