--- a/index.html
+++ b/index.html
@@ -1,53 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>V Einstein</title>
-      <meta name="author" content="Prince">
-      <meta name="keywords" content="school,grade6,presidents">
-      <meta name="description" content="This website is designed to be published at the same time the next school year comes">
-      <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600" rel="stylesheet">
-      <link async rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-      <link async rel="stylesheet" href="css/component.min.css">
-      <link async rel="stylesheet" href="css/main.css">
-      <link async rel="stylesheet" href="css/global.css">
-      <link async rel=”icon” href=”favicon.ico” type=”image/x-icon”>
-      <link async rel=”shortcut icon” href=”favicon.ico” type=”image/x-icon”>
-      <script>! function(a, b, c, d, e, f, g){a.GoogleAnalyticsObject=e, a[e]=a[e] || function(){(a[e].q=a[e].q || []).push(arguments)}, a[e].l=1 * new Date, f=b.createElement(c), g=b.getElementsByTagName(c)[0], f.async=1, f.src=d, g.parentNode.insertBefore(f, g)}(window, document, "script", "https://www.google-analytics.com/analytics.js", "ga"), ga("create", "UA-74643356-2", "auto"), ga("send", "pageview"); </script>
-   </head>
-   <body>
-      <div class="navbar-fixed">
-         <nav class="transparent z-depth-0" id="menu">
-            <div class="nav-wrapper z-depth-0">
-               <a href="#" id="brand-top" class="brand-logo"></a> <a href="#" data-activates="mobile" class="button-collapse"><i class="fa fa-bars"></i></a> 
-               <ul class="right hide-on-med-and-down cl-effect-14" id="cl-effect-14">
-                  <li><a href="#" id="officers">Officers</a></li>
-               </ul>
-               <ul class="side-nav" id="mobile">
-                  <li><a href="#header">Home</a></li>
-                  <li><a href="#staff">Staff</a></li>
-               </ul>
-            </div>
-         </nav>
-      </div>
-
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-      <script src="https://use.fontawesome.com/cb2592f0cc.js"></script>
-      <script src="js/typed.js"></script>
-      <script src="js/index.js"></script>
-      <script src="js/moment.js"></script>
-      <script src="js/jquery.cookies.js"></script>
-      <script src="js/main.js"></script>
-      <script src="js/functions.js"></script>
-      <script>
-      // All Json content is loaded respectively into #(item) 
-      var jsonUrl="http://madgeekonline.com/tfinfo/";
-      var jsonContent=[ "players"]; $(document).ready(function(){
-         loadJson(jsonUrl, jsonContent);
-      }); 
-      </script> 
-   </body>
+      <title>Grade Six | Einstein</title>
+      </head>
 </html>
